post creation and deletion
added redirect on creation and deletion of post

--- a/posts.html
+++ b/posts.html
@@ -29,7 +29,7 @@
         </div>
       </nav>
     <main class="container wrapper" style="margin-top: 20vh;">
-        <form action="" method="POST" class="form">
+        <form action="" method="POST" id="createPostForm" class="form">
             <div class="mb-3">
                 <label for="formTitle" class="form-label">Title:</label>
                 <input type="text" class="form-control" id="formTitle" placeholder="">
