--- a/posts.html
+++ b/posts.html
@@ -28,20 +28,45 @@
           </div>
         </div>
       </nav>
-    <main class="container wrapper" style="margin-top: 20vh;">
-        <form action="" method="POST" id="createPostForm" class="form">
-            <div class="mb-3">
-                <label for="formTitle" class="form-label">Title:</label>
-                <input type="text" class="form-control" id="formTitle" placeholder="">
+      <div class="container">
+        <div class="row">
+            <form action="" id="searchBar" class="form">
+                <div class="mt-5 pt-3 d-flex">
+                    <label for="formTitle" class="form-label p-2">Search:</label>
+                    <input type="text" class="form-control" id="formTitle" placeholder="">
+                </div>
+            </form>
+        </div>
+        <button type="button" class="btn btn-primary my-3" data-bs-toggle="modal" data-bs-target="#postModal">
+            Create Post
+          </button>
+        
+          <div class="modal fade" id="postModal" tabindex="-1" aria-labelledby="postModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="postModalLabel">Create Post:</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                    <form action="" method="POST" id="createPostForm" class="form modal-body">
+                        <div class="mb-3">
+                            <label for="formTitle" class="form-label">Title:</label>
+                            <input type="text" class="form-control" id="formTitle" placeholder="">
+                          </div>
+                          <div class="mb-3">
+                            <label for="formBody" class="form-label">Your Message:</label>
+                            <textarea class="form-control" id="formBody" rows="3"></textarea>
+                          </div>
+                          <div class="">
+                            <button type="submit" class="btn btn-primary mb-3">Submit</button>
+                          </div>
+                    </form>
               </div>
-              <div class="mb-3">
-                <label for="formBody" class="form-label">Your Message:</label>
-                <textarea class="form-control" id="formBody" rows="3"></textarea>
-              </div>
-              <div class="">
-                <button type="submit" class="btn btn-primary mb-3">Submit</button>
-              </div>
-        </form>
+            </div>
+          </div>          
+      </div>
+    <main class="container wrapper" style="margin-top: 5h;">
+
         <div class="row postContainer">
             
         </div>
