search filter for body and title

--- a/posts.html
+++ b/posts.html
@@ -32,8 +32,8 @@
         <div class="row">
             <form action="" id="searchBar" class="form">
                 <div class="mt-5 pt-3 d-flex">
-                    <label for="formTitle" class="form-label p-2">Search:</label>
-                    <input type="text" class="form-control" id="formTitle" placeholder="">
+                    <label for="searchContent" class="form-label p-2">Search:</label>
+                    <input type="text" class="form-control" id="searchContent" placeholder="">
                 </div>
             </form>
         </div>
