--- a/profile.html
+++ b/profile.html
@@ -28,7 +28,7 @@
           </div>
         </div>
       </nav>
-      <main class="container profileContainer">
+      <main class="container profileContainer d-grid vh-100" styles="place-items:center;">
 
       </main>
       <section class="container editForm">
