--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
 </head>
 <body class="bg-dark">
-    <div class="container vh-100 my-auto text-center">
-        <header class="row py-5">
+    <div class="custom-container vh-100 container text-center d-grid gap-2 col-8 mx-auto">
+        <header class="row h-50 d-inline-block">
             <h1 class="header-title text-primary">
                 Blockster
             </h1>
