--- a/sing-up.html
+++ b/sing-up.html
@@ -10,8 +10,8 @@
     <script src="js/main.mjs" type="module" defer></script>
 </head>
 <body class="bg-dark">
-    <div class="container vh-100 my-auto text-center">
-        <header class="row py-5">
+    <div class="custom-container container vh-100 my-auto text-center d-grid">
+        <header class="row">
             <h1 class="header-title text-primary">
                 Blockster
             </h1>
@@ -30,7 +30,7 @@
                 "
             >
             <form id="sign-up" method="post">
-                <div class="alert-box alert alert-danger"></div>
+                <div class="alert-box alert alert-danger d-none"></div>
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control signUpName" id="signupName" placeholder="John Doe">
                     <label for="signupName">Name</label>
