background update and small fix to destructured object

--- a/sing-up.html
+++ b/sing-up.html
@@ -51,7 +51,7 @@
                     Sign Up
                 </button>
             </form>
-            <a class="link-info text-end" href="sing-up.html">
+            <a class="link-info text-end" href="index.html">
                 or.. <span>log in..</span>
             </a>
         </main>
