some additional styling

--- a/profile.html
+++ b/profile.html
@@ -10,18 +10,20 @@
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
 </head>
 <body>
-    <nav class="navbar fixed-top navbar-expand-lg bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Blockster</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
+    <nav class="navbar fixed-top navbar-expand-lg">
+        <div class="container">
+          <a class="header-title navbar-brand" href="#">Blockster</a>
+          <div class="
+                  bg-primary
+                  bg-gradient
+                  rounded
+                  bg-opacity-25"
+                id="navbarNav">
+            <ul class="navbar-nav rounded">
+              <li class="nav-item m-2">
                 <a class="nav-link active" aria-current="page" href="profile.html">Profile</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item m-2">
                 <a class="nav-link" href="posts.html">Posts</a>
               </li>
             </ul>
@@ -31,8 +33,5 @@
       <main class="container profileContainer d-grid vh-100" styles="place-items:center;">
 
       </main>
-      <section class="container editForm">
-
-      </section>
 </body>
 </html>
