--- a/profile.html
+++ b/profile.html
@@ -30,8 +30,13 @@
           </div>
         </div>
       </nav>
-      <main class="container profileContainer d-grid vh-100" styles="place-items:center;">
+      <main class="container profileContainer d-grid">
 
       </main>
+      <div class="container">
+        <section class="profilePosts row rounded p-4 shadow bg-primary bg-gradient bg-opacity-25 mt-5">
+          
+        </section>
+      </div>
 </body>
 </html>
