--- a/post.html
+++ b/post.html
@@ -10,27 +10,30 @@
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
 </head>
 <body>
-    <nav class="navbar fixed-top navbar-expand-lg bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Blockster</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="profile.html">Profile</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="posts.html">Posts</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    <h1>Hello</h1>
-    <div class="singlePostContainer">
+  <nav class="navbar fixed-top navbar-expand-lg">
+    <div class="container">
+      <a class="header-title navbar-brand" href="index.html">Blockster</a>
+      <div class="
+              bg-primary
+              bg-gradient
+              rounded
+              bg-opacity-25"
+            id="navbarNav">
+        <ul class="navbar-nav rounded">
+          <li class="nav-item m-2">
+            <a class="nav-link "  href="profile.html">Profile</a>
+          </li>
+          <li class="nav-item m-2">
+            <a class="nav-link" aria-current="page" href="posts.html">Posts</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <main class="container d-grid vh-100 custom-container">
+    <div class="row singlePostContainer rounded p-2 shadow bg-primary bg-gradient bg-opacity-25">
 
     </div>
+  </main>
 </body>
 </html>
