--- a/posts.html
+++ b/posts.html
@@ -30,20 +30,20 @@
           </div>
         </div>
       </nav>
-      <div class="container w-100 d-flex flex-column">
-        <div class="row">
-            <form action="" id="searchBar" class="form">
-                <div class="mt-5 pt-3 d-flex">
-                    <label for="searchContent" class="form-label p-2">Search:</label>
-                    <input type="text" class="form-control" id="searchContent" placeholder="">
+      <div class="container w-100 d-flex flex-column searchContainer">
+        <div class="row rounded p-2 shadow bg-primary bg-gradient bg-opacity-25">
+            <form action="" id="searchBar" class="form p-3">
+                <div class="form-floating">
+                  <input type="text" class="form-control" id="searchContent" placeholder="search">
+                  <label for="searchContent" class="form-label">Search:</label>
                 </div>
-                <div class="checkboxes">
-                  <label class="text-light" for="titleAndBody">Content</label>
-                  <input checked type="checkbox" name="titleAndBody" id="checkboxContent">
-                  <label class="text-light" for="author">Author</label>
-                  <input checked type="checkbox" name="author" id="checkboxAuthor">
-                  <label class="text-light" for="id">ID</label>
-                  <input checked type="checkbox" name="id" id="checkboxID">
+                <div class="checkboxes d-flex">
+                  <label class="text-light ms-auto" for="titleAndBody">Content</label>
+                  <input class="m-2" checked type="checkbox" name="titleAndBody" id="checkboxContent">
+                  <label class="text-light ms-3" for="author">Author</label>
+                  <input class="m-2" checked type="checkbox" name="author" id="checkboxAuthor">
+                  <label class="text-light ms-3" for="id">ID</label>
+                  <input class="m-2" checked type="checkbox" name="id" id="checkboxID">
                 </div>
             </form>
         </div>
@@ -77,7 +77,7 @@
       </div>
     <main class="container wrapper" style="margin-top: 5h;">
 
-        <div class="row postContainer row rounded p-4 shadow bg-primary bg-gradient bg-opacity-25 mt-5">
+        <div class="postContainer row rounded p-4 shadow bg-primary bg-gradient bg-opacity-25 mt-5">
             
         </div>
     </main>
