--- a/profile.html
+++ b/profile.html
@@ -35,8 +35,9 @@
       </main>
       <div class="container">
         <section class="profilePosts row rounded p-4 shadow bg-primary bg-gradient bg-opacity-25 mt-5">
-          
+
         </section>
       </div>
+      <footer class="row" style="height: 50px"></footer>
 </body>
 </html>
