added some error handling on login logout

--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 <body class="bg-dark">
     <div class="custom-container vh-100 container text-center d-grid gap-2 col-8 mx-auto">
         <header class="row h-50 d-inline-block">
-            <h1 class="header-title text-primary">
+            <h1 class="header-title text-primary mb-5">
                 Blockster
             </h1>
-            <p>Your block..</p>
         </header>
         <main 
             class=
@@ -38,6 +37,7 @@
                     <input type="password" class="form-control loginPass" id="floatingPassword" placeholder="Password">
                     <label for="floatingPassword">Password</label>
                   </div>
+                  <div class="alert-box"></div>
                 <button class="my-5 w-100 p-2 btn btn-primary fw-bold" type="submit">
                     Log-in
                 </button>
