--- a/sing-up.html
+++ b/sing-up.html
@@ -30,7 +30,7 @@
                 "
             >
             <form id="sign-up" method="post">
-                <div class="alert-box alert alert-danger d-none"></div>
+                
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control signUpName" id="signupName" placeholder="John Doe">
                     <label for="signupName">Name</label>
@@ -47,6 +47,7 @@
                     <input type="password" class="form-control signUpPassConf" id="signupPassConf" placeholder="Password">
                     <label for="signupPassConf">Confirm Password</label>
                   </div>
+                  <div class="alert-box alert alert-danger d-none mt-3"></div>
                 <button class="my-5 w-100 p-2 btn btn-primary fw-bold" type="submit">
                     Sign Up
                 </button>
