11:57 styling select before delivery

--- a/posts.html
+++ b/posts.html
@@ -76,18 +76,17 @@
           </div>          
       </div>
     <main class="container wrapper" style="margin-top: 5h;">
-      <div class="sortOptions">
-        <select name="sortOrder" id="sortOrder">
+      <div class="sortOptions mt-3">
+        <select name="sortOrder" id="sortOrder" class="form-select" aria-label="Select Sort">
           <option value="t-Asc">Title - Ascending</option>
           <option value="t-Desc">Title - Descending</option>
           <option value="d-Asc">Date - Ascending</option>
           <option value="d-Desc">Date - Descending</option>
           <option value="id-Asc">ID - Ascending</option>
           <option value="id-Desc">ID - Descending</option>
-
         </select>
       </div>
-        <div class="postContainer row rounded p-4 shadow bg-primary bg-gradient bg-opacity-25 mt-5">
+        <div class="postContainer row rounded p-4 shadow bg-primary bg-gradient bg-opacity-25 mt-2">
             
         </div>
     </main>
