--- a/posts.html
+++ b/posts.html
@@ -78,6 +78,7 @@
     <main class="container wrapper" style="margin-top: 5h;">
       <div class="sortOptions mt-3">
         <select name="sortOrder" id="sortOrder" class="form-select" aria-label="Select Sort">
+          <option selected>Select Sort</option>
           <option value="t-Asc">Title - Ascending</option>
           <option value="t-Desc">Title - Descending</option>
           <option value="d-Asc">Date - Ascending</option>
